--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -33,44 +33,30 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
       <div class="humberger__menu__logo">
-        <a href="#"><img th:src="@{/img/logo.png}" alt=""></a>
+        <a href="#"><img th:src="@{/img/logoIMusic.png}" alt=""></a>
       </div>
       <div class="humberger__menu__cart">
         <ul>
-          <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
           <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
         </ul>
         <div class="header__cart__price">item: <span>$150.00</span></div>
       </div>
       <div class="humberger__menu__widget">
         <div class="header__top__right__language">
-          <img src="../static/img/language.png" alt="">
-          <div>English</div>
-          <span class="arrow_carrot-down"></span>
-          <ul>
-            <li><a href="#">Spanis</a></li>
-            <li><a href="#">English</a></li>
-          </ul>
         </div>
         <div class="header__top__right__auth">
           <a href="#"><i class="fa fa-user"></i> Login</a>
         </div>
       </div>
       <nav class="humberger__menu__nav mobile-menu">
-        <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="shop-grid.html">Shop</a></li>
-          <li><a href="#">Pages</a>
             <ul class="header__menu__dropdown">
-              <li><a href="shop-details.html">Shop Details</a></li>
-              <li><a href="shoping-cart.html">Shoping Cart</a></li>
-              <li><a href="checkout.html">Check Out</a></li>
-              <li><a href="blog-details.html">Blog Details</a></li>
+              <li class="active"><a th:href="@{/home}">TRANG CHỦ</a></li>
+              <li><a th:href="@{/shop-grid}">SẢN PHẨM</a></li>
+              <li><a th:href="@{/shoping-cart}">THANH TOÁN</a></li>
+              <li><a th:href="@{/blog}">TIN TỨC</a></li>
+              <li><a th:href="@{/contact}">LIÊN HỆ</a></li>
             </ul>
-          </li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+
       </nav>
       <div id="mobile-menu-wrap"></div>
       <div class="header__top__right__social">
@@ -81,8 +67,7 @@
       </div>
       <div class="humberger__menu__contact">
         <ul>
-          <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-          <li>Free Shipping for all Order of $99</li>
+          <li><i class="fa fa-envelope"></i> Istrument@gmail.com</li>
         </ul>
       </div>
     </div>
@@ -130,14 +115,7 @@
               <ul>
                 <li class="active"><a th:href="@{/home}">TRANG CHỦ</a></li>
                 <li><a th:href="@{/shop-grid}">SẢN PHẨM</a></li>
-                <li><a th:href="@{/shoping-cart}">THANH TOÁN</a>
-                  <!-- <ul class="header__menu__dropdown">
-                      <li><a href="./shop-details.html">Shop Details</a></li>
-                      <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                      <li><a href="./checkout.html">Check Out</a></li>
-                      <li><a href="./blog-details.html">Blog Details</a></li>
-                  </ul> -->
-                </li>
+                <li><a th:href="@{/shoping-cart}">THANH TOÁN</a></li>
                 <li><a th:href="@{/blog}">TIN TỨC</a></li>
                 <li><a th:href="@{/contact}">LIÊN HỆ</a></li>
               </ul>
@@ -387,40 +365,40 @@
                 <a th:href="@{/index}"><img th:src="@{/img/logoIMusic.png}" alt=""></a>
               </div>
               <ul>
-                <li>Address: 60-49 Road 11378 New York</li>
-                <li>Phone: +65 11.188.888</li>
-                <li>Email: hello@colorlib.com</li>
+                <li>Địa chỉ: 12 Nguyễn Văn Bảo, Gò Vấp, TP.HCM</li>
+                <li>Liên hệ: 0342455466</li>
+                <li>Email: Instrument@gmail.com</li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
             <div class="footer__widget">
-              <h6>Useful Links</h6>
+              <h6>Thông tin liên quan</h6>
               <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">About Our Shop</a></li>
-                <li><a href="#">Secure Shopping</a></li>
-                <li><a href="#">Delivery infomation</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Our Sitemap</a></li>
+                <li><a href="#">Về chúng tôi</a></li>
+                <li><a href="#">Sản phẩm của chúng tôi</a></li>
+                <li><a href="#">Bảo mật</a></li>
+                <li><a href="#">Thông tin giao hàng</a></li>
+                <li><a href="#">Chính sách bảo mật</a></li>
+                <li><a href="#">Vị trí</a></li>
               </ul>
               <ul>
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">Our Services</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Innovation</a></li>
-                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Chúng tôi là ai</a></li>
+                <li><a href="#">Dịch vụ của chúng tôi</a></li>
+
+                <li><a href="#">Liên hệ</a></li>
+                <li><a href="#">Đổi mới</a></li>
+                <li><a href="#">Chứng thực</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="footer__widget">
-              <h6>Join Our Newsletter Now</h6>
-              <p>Get E-mail updates about our latest shop and special offers.</p>
+              <h6>Tham gia để xem những thông tin mới nhất</h6>
+              <p>Nhập gmail để có thông tin mới nhất về sản phẩm</p>
               <form action="#">
-                <input type="text" placeholder="Enter your mail">
-                <button type="submit" class="site-btn">Subscribe</button>
+                <input type="text" placeholder="Nhập gmail của bạn">
+                <button type="submit" class="site-btn">Đăng ký</button>
               </form>
               <div class="footer__widget__social">
                 <a href="#"><i class="fa fa-facebook"></i></a>
